etc/tests/fuzz/errors/type/operator-return-mismatch.nshape
shape type-operator-return-mismatch {
  family "compiler-errors/type"
  generator "error"
  features ["error", "type", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail

  expect_message "operator target 'Wrong.add' returns int but operator declares Wrong"
  source ny <<'NY'
use std.core

impl Wrong {
   fn add(self a, self b) int {
      1
   }
   operator + self: self = add
}

print(1)
NY
}
